resources/tests/invalid_syntax/fn_ret_type.ct
//`Type of return value does not match function return type!
//1
fn hello()->i64 {
  return 10u64;
}